--- a/18css.css
+++ b/18css.css
@@ -35,4 +35,20 @@
   }
   #welcome>p{
     text-align: center;
+    margin: 0em 5em 0em 5em;
+  }
+  #catalog-input,#form-btn{
+    text-align: center;
+    font: 1.25rem 800;
+    padding: 8px;
+  }
+  #catalog-input{
+    border: 2px solid blue;
+    width: 37.5%;
+  }
+  .staff-pick-img{
+    border: 1px solid black;
+    border-radius: 0 7px 7px 0;
+    width: 10em ;
+    height: 15em;
   }
